# inbox

./: .env.mcp.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONNECTOR_ROADMAP.md  DOCS_INDEX.md  MCP_SETUP.md  MCP_V1_PLAN.md  PLAN.md  README.md  SHEETS.md  SHEETS_CHANGELOG.md  SHEETS_QUICKSTART.md  ambient_daemon.py  ambient_notes.py  command_palette.py  contacts.py  dev.sh  inbox.py  inbox_client.py  inbox_mcp_readonly.py  inbox_mcp_readonly_stdio.py  inbox_mcp_stdio.py  inbox_server.py  main.py  mcp_backend.py  mcp_server.py  memory_store.py  message_index_store.py  message_sync.py  oci_retry.sh  organize-inbox-helper.sh  organize_inbox.py  pyproject.toml  scheduler.py  services.py  test_autocomplete_dev.py  tools_registry.py  unsubscribe_all_newsletters.py  (+2 more)
.cursor/: mcp.json
.factory/: init.sh  services.yaml
agents/: README.md
audio/: ambient.py  dictate.py  whisper.py
batch/: archive-input.tsv  batch-runner.sh
config/: _profile.md  codex.inbox.example.toml  gemini-settings.inbox.example.json  inbox.env.example  priorities.yml
deploy/: Caddyfile.example  com.inbox.backend.plist.example  com.inbox.mcp-readonly.plist.example  com.inbox.mcp.plist.example  inbox-backend.service.example  inbox-mcp-readonly.service.example  inbox-mcp.service.example
evals/: README.md  run_evals.py
llm/: autocomplete.py  engine.py  extract.py
modes/: _shared.md  batch-archive.md  followup-sweep.md  morning-brief.md  triage.md
scripts/: run_inbox_backend.sh  run_inbox_mcp_http.sh  run_inbox_mcp_http_readonly.sh  run_inbox_mcp_stdio.sh  (+2 more)
(+105 files in other folders)
